fix fruito video / text alignment

--- a/src/component/Work/css/work.css
+++ b/src/component/Work/css/work.css
@@ -76,6 +76,30 @@ p:last-of-type {
   box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.12);
   margin:20px 0;
 }
+.image_carousel_fruito {
+  display: block;
+  -webkit-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.12);
+  -moz-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.12);
+  box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.12);
+  margin:20px 0;
+  background-image: url('/fruito/att_bg@2x.png');
+  background-size: cover;
+  background-position: center;
+  padding: 20px 216px;
+}
+.image_carousel_fruito_wrap {
+  background-size: cover;
+  background-position: center;
+  background-image: url('/fruito/i-phone-x@2x.png');
+  height: 540px;
+  width: 268px;
+  z-index: 99;
+  position: relative;
+}
+.image_carousel_fruito_video {
+  margin-top: -530px;
+  margin-left: 14px;
+}
 .hide {
   display: none;
 }
@@ -240,7 +264,7 @@ h5{
   margin-top: 100px;
 }
 .palmdrive-main {
-  padding-right: 40px;
+  /*padding-right: 40px;*/
 }
 h3{
   font-family: "Montserrat-Regular","Montserrat";
@@ -453,7 +477,8 @@ h3{
 .palmdrive-intro-img {
   height: 682px;
   width: 1000px;
-  margin: 41px -182px;
+  /*need to align horizontally*/
+  margin: 41px -262px;
   position: relative; 
 }
 .first-word {
@@ -520,7 +545,7 @@ h3{
 }
 .palmdrive-browser-long-image {
   width: 1400px;
-  margin-left: -156px;
+  margin-left: -172px;
   margin-top: -938px;
   height: 840px;
   overflow: hidden;
